--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -27,7 +27,7 @@ img {
 .contact-item{
     display: flex;
     align-items: center;
-    margin: 24px 0;
+    margin: 24px 0 ;
     border: 1px dashed black;
     padding: 16px;
     border-radius: 8px;
@@ -36,6 +36,13 @@ img {
     width: 64px;
     border-radius:50%;
 }
+
+.contact-item__body {
+    margin-left: 8px;
+    padding-left: 8px;
+    border-left: 1px solid #aaa;
+    flex: 1;
+  }
 
 .contact-item_title{
     padding: 4px 0;
@@ -46,6 +53,7 @@ img {
 
 }
 .contact-item_delete{
+    
     padding: 8px;
     font-size:18px;
     background-color:orangered;
